--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start --single-run",
+    "test-dev": "karma start",
+    "test-jasmine": "jasmine"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "bootstrap": "^3.4.1",
-    "jasmine": "^3.8.0"
+    "browserify": "^17.0.0",
+    "jasmine": "^3.8.0",
+    "karma": "^6.3.4",
+    "karma-browserify": "^8.1.0",
+    "karma-firefox-launcher": "^2.1.1",
+    "karma-jasmine": "^4.0.1",
+    "watchify": "^4.0.0"
   }
 }
